[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/lemon.png" type="Texture" id=1]
[ext_resource path="res://Assets/cups.png" type="Texture" id=2]
[ext_resource path="res://Global/TitlePage.gd" type="Script" id=3]

[sub_resource type="Theme" id=1]
Label/colors/font_color = Color( 0, 0, 0, 1 )
RichTextLabel/colors/default_color = Color( 0, 0, 0, 1 )
RichTextLabel/colors/font_color_selected = Color( 0.49, 0.49, 0.49, 1 )
RichTextLabel/colors/font_color_shadow = Color( 0, 0, 0, 0 )
RichTextLabel/colors/selection_color = Color( 0.1, 0.1, 1, 0.8 )
RichTextLabel/constants/line_separation = 1
RichTextLabel/constants/shadow_as_outline = 0
RichTextLabel/constants/shadow_offset_x = 1
RichTextLabel/constants/shadow_offset_y = 1
RichTextLabel/constants/table_hseparation = 3
RichTextLabel/constants/table_vseparation = 3
RichTextLabel/fonts/bold_font = null
RichTextLabel/fonts/bold_italics_font = null
RichTextLabel/fonts/italics_font = null
RichTextLabel/fonts/mono_font = null
RichTextLabel/fonts/normal_font = null
RichTextLabel/styles/focus = null
RichTextLabel/styles/normal = null

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.235294, 0.227451, 0.266667, 1 )

[sub_resource type="Theme" id=3]
MenuButton/styles/normal = SubResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Background" type="ColorRect" parent="."]
margin_left = 1.0
margin_right = 1020.0
margin_bottom = 579.0
color = Color( 0, 1, 0.0156863, 1 )

[node name="Table" type="ColorRect" parent="."]
margin_left = -1.0
margin_top = 472.0
margin_right = 1020.0
margin_bottom = 582.0
color = Color( 0.52549, 0.0313726, 0.0313726, 1 )

[node name="Lemon" type="Sprite" parent="."]
position = Vector2( 171, 437 )
scale = Vector2( 0.580735, 0.580735 )
texture = ExtResource( 1 )

[node name="Cups" type="Sprite" parent="."]
position = Vector2( 819, 446 )
scale = Vector2( 0.70612, 0.70612 )
texture = ExtResource( 2 )

[node name="Title" type="Label" parent="."]
margin_top = 8.0
margin_right = 204.0
margin_bottom = 23.0
rect_scale = Vector2( 5, 5 )
theme = SubResource( 1 )
text = "Lemons to Lemonade"
align = 1

[node name="StartButton" type="Button" parent="."]
margin_left = 351.0
margin_top = 136.0
margin_right = 411.0
margin_bottom = 161.0
rect_scale = Vector2( 5, 4 )
text = "Start"

[node name="SaveButton" type="Button" parent="."]
margin_left = 18.0
margin_top = 138.0
margin_right = 78.0
margin_bottom = 163.0
rect_scale = Vector2( 5, 4 )
text = "Save"

[node name="LoadButton" type="MenuButton" parent="."]
margin_left = 688.0
margin_top = 134.0
margin_right = 748.0
margin_bottom = 159.0
rect_scale = Vector2( 5, 4 )
theme = SubResource( 3 )
text = "Load"
flat = false
switch_on_hover = true

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="SaveButton" to="." method="_on_SaveButton_pressed"]
